# resym_demo

./: readme.md  requirement.txt
aggregation/: accessed_fileds.py  callgraph.py  coreutils.sh  eval_baseline.py  eval_dirty.py  eval_osprey.py  eval_our.py  eval_our_osprey.py  eval_our_wo_aggregation_osprey.py  eval_utils.py  gen_csv.py  gen_csv_original.py  group_info.py  num_caller.py  osprey_accessed_fileds.py  prep.py  readme.md  skip_gt.py  synonyms.json  vote_offset.py  vote_type.py  vote_type_old.py  vote_utils.py
clang-parser/: CMakeLists.txt  beyond_access_driver.cc  driver.cc  gen_beyond_access.sh  gen_callsite_info.sh  gen_dataflow_info.sh  note.md
clang-parser/beyond_access/: CMakeCache.txt  Makefile  cmake_install.cmake
clang-parser/call_site/: CMakeCache.txt  Makefile  cmake_install.cmake
clang-parser/dataflow/: CMakeCache.txt  Makefile  cmake_install.cmake
clang-parser/include/: configUtils.hh  consumer.hh  propagation_rule.hh
clang-parser/prop_rules/: beyond_access_visitor.cc  callsite_visitor.cc  dataflow_visitor.cc  var_renamer.cc
clang-parser/test/: 14.c  14.json  1fafe7.c  401706.c  5222.c  5222.json  5222_beyond_access.json  5222_dataflow.json  5222_out.c  62.c  62.json  62_beyond_access.json  62_callsites.json
clang-parser/utils/: configUtils.cc
config/: base_types.json  ida_types.json
data/: beyond_access_command.sh  callsites_command.sh  dataflow_command.sh  osprey_heap_predict.jsonl
data/commands/: [_ground_beyond_access_command.sh  [_ground_callsites_command.sh  [_ground_dataflow_command.sh  base64_ground_beyond_access_command.sh  base64_ground_callsites_command.sh  base64_ground_dataflow_command.sh  basename_ground_beyond_access_command.sh  basename_ground_callsites_command.sh  basename_ground_dataflow_command.sh  cat_ground_beyond_access_command.sh  cat_ground_callsites_command.sh  (+289 more)
process_data/: gen_beyond_access_command.py  gen_command_script.py  gen_heap_data.py  gen_stack_data.py  parse_decompiled.py  prep_decompiled.py  process_data.sh  process_osprey.sh  readme.md  utils.py
training_src/: hf_inference_heap.py  hf_inference_stack.py
(+19396 files in other folders)
